example: sho prompt add button desc, style, plugin

--- a/examples/sho/prompts/system_prompt_ipywui_examples.ipynb
+++ b/examples/sho/prompts/system_prompt_ipywui_examples.ipynb
@@ -20,6 +20,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## ipywui组件库\n",
+    "\n",
+    "IPywUI 是基于 Vue.py 和 ipywidgets 开发的 UI 组件库。当前作为 Vue.py 内置的 UI 组件库。\n",
+    "\n",
+    "ipywui组件作为Vuepy的插件提供，一般会自动注册，也可以手动注册：\n",
+    "```py\n",
+    "from ipywui import wui\n",
+    "app.use(wui)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Component, Button\n",
     "\n",
     "对于click的事件处理函数有两种方式：\n",
@@ -28,7 +43,9 @@
     "```python\n",
     "def handle(btn):\n",
     "  ...\n",
-    "```"
+    "```\n",
+    "\n",
+    " 可以通过icon属性为按钮添加图标，图标为fontawesome v5。"
    ]
   },
   {
@@ -67,7 +84,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Component, Layout"
+    "### Component, Layout\n",
+    "\n",
+    "通过基础的24分栏创建布局。"
    ]
   },
   {
@@ -106,7 +125,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Component, AppLayout"
+    "### Component, AppLayout\n",
+    "\n",
+    "用于布局的容器组件，方便搭建页面的基本结构："
    ]
   },
   {
@@ -12170,7 +12191,489 @@
          }
         }
        ],
+       "_js2py_layoutDelta": {
+        "layout_delta": {
+         "activeselection": {
+          "fillcolor": "rgba(0,0,0,0)",
+          "opacity": 0.5
+         },
+         "activeshape": {
+          "fillcolor": "rgb(255,0,255)",
+          "opacity": 0.5
+         },
+         "annotations": [],
+         "autotypenumbers": "strict",
+         "calendar": "gregorian",
+         "clickmode": "event",
+         "colorscale": {
+          "diverging": [
+           [
+            0,
+            "#8e0152"
+           ],
+           [
+            0.1,
+            "#c51b7d"
+           ],
+           [
+            0.2,
+            "#de77ae"
+           ],
+           [
+            0.3,
+            "#f1b6da"
+           ],
+           [
+            0.4,
+            "#fde0ef"
+           ],
+           [
+            0.5,
+            "#f7f7f7"
+           ],
+           [
+            0.6,
+            "#e6f5d0"
+           ],
+           [
+            0.7,
+            "#b8e186"
+           ],
+           [
+            0.8,
+            "#7fbc41"
+           ],
+           [
+            0.9,
+            "#4d9221"
+           ],
+           [
+            1,
+            "#276419"
+           ]
+          ],
+          "sequential": [
+           [
+            0,
+            "#0d0887"
+           ],
+           [
+            0.1111111111111111,
+            "#46039f"
+           ],
+           [
+            0.2222222222222222,
+            "#7201a8"
+           ],
+           [
+            0.3333333333333333,
+            "#9c179e"
+           ],
+           [
+            0.4444444444444444,
+            "#bd3786"
+           ],
+           [
+            0.5555555555555556,
+            "#d8576b"
+           ],
+           [
+            0.6666666666666666,
+            "#ed7953"
+           ],
+           [
+            0.7777777777777778,
+            "#fb9f3a"
+           ],
+           [
+            0.8888888888888888,
+            "#fdca26"
+           ],
+           [
+            1,
+            "#f0f921"
+           ]
+          ],
+          "sequentialminus": [
+           [
+            0,
+            "#0d0887"
+           ],
+           [
+            0.1111111111111111,
+            "#46039f"
+           ],
+           [
+            0.2222222222222222,
+            "#7201a8"
+           ],
+           [
+            0.3333333333333333,
+            "#9c179e"
+           ],
+           [
+            0.4444444444444444,
+            "#bd3786"
+           ],
+           [
+            0.5555555555555556,
+            "#d8576b"
+           ],
+           [
+            0.6666666666666666,
+            "#ed7953"
+           ],
+           [
+            0.7777777777777778,
+            "#fb9f3a"
+           ],
+           [
+            0.8888888888888888,
+            "#fdca26"
+           ],
+           [
+            1,
+            "#f0f921"
+           ]
+          ]
+         },
+         "colorway": [
+          "#636efa",
+          "#EF553B",
+          "#00cc96",
+          "#ab63fa",
+          "#FFA15A",
+          "#19d3f3",
+          "#FF6692",
+          "#B6E880",
+          "#FF97FF",
+          "#FECB52"
+         ],
+         "dragmode": "zoom",
+         "font": {
+          "color": "#2a3f5f",
+          "family": "\"Open Sans\", verdana, arial, sans-serif",
+          "lineposition": "none",
+          "shadow": "none",
+          "size": 12,
+          "style": "normal",
+          "textcase": "normal",
+          "variant": "normal",
+          "weight": "normal"
+         },
+         "height": 360,
+         "hidesources": false,
+         "hoverdistance": 20,
+         "hoverlabel": {
+          "align": "left",
+          "font": {
+           "family": "Arial, sans-serif",
+           "lineposition": "none",
+           "shadow": "none",
+           "size": 13,
+           "style": "normal",
+           "textcase": "normal",
+           "variant": "normal",
+           "weight": "normal"
+          },
+          "grouptitlefont": {
+           "family": "Arial, sans-serif",
+           "lineposition": "none",
+           "shadow": "none",
+           "size": 13,
+           "style": "normal",
+           "textcase": "normal",
+           "variant": "normal",
+           "weight": "normal"
+          },
+          "namelength": 15
+         },
+         "hovermode": "closest",
+         "hoversubplots": "overlaying",
+         "images": [],
+         "margin": {
+          "autoexpand": true,
+          "b": 80,
+          "l": 80,
+          "pad": 0,
+          "r": 80,
+          "t": 100
+         },
+         "minreducedheight": 64,
+         "minreducedwidth": 64,
+         "modebar": {
+          "activecolor": "rgba(68, 68, 68, 0.7)",
+          "add": "",
+          "bgcolor": "rgba(255, 255, 255, 0.5)",
+          "color": "rgba(68, 68, 68, 0.3)",
+          "orientation": "h",
+          "remove": ""
+         },
+         "newselection": {
+          "line": {
+           "dash": "dot",
+           "width": 1
+          },
+          "mode": "immediate"
+         },
+         "newshape": {
+          "drawdirection": "diagonal",
+          "fillcolor": "rgba(0,0,0,0)",
+          "fillrule": "evenodd",
+          "label": {
+           "text": "",
+           "texttemplate": ""
+          },
+          "layer": "above",
+          "legend": "legend",
+          "legendgroup": "",
+          "legendgrouptitle": {
+           "font": {
+            "lineposition": "none",
+            "shadow": "none",
+            "style": "normal",
+            "textcase": "normal",
+            "variant": "normal",
+            "weight": "normal"
+           },
+           "text": ""
+          },
+          "legendrank": 1000,
+          "line": {
+           "color": "#444",
+           "dash": "solid",
+           "width": 4
+          },
+          "opacity": 1,
+          "showlegend": false,
+          "visible": true
+         },
+         "paper_bgcolor": "white",
+         "plot_bgcolor": "#E5ECF6",
+         "scattermode": "overlay",
+         "selections": [],
+         "separators": ".,",
+         "shapes": [],
+         "showlegend": false,
+         "sliders": [],
+         "spikedistance": -1,
+         "title": {
+          "automargin": false,
+          "font": {
+           "color": "#2a3f5f",
+           "family": "\"Open Sans\", verdana, arial, sans-serif",
+           "lineposition": "none",
+           "shadow": "none",
+           "size": 17,
+           "style": "normal",
+           "textcase": "normal",
+           "variant": "normal",
+           "weight": "normal"
+          },
+          "pad": {
+           "b": 0,
+           "l": 0,
+           "r": 0,
+           "t": 0
+          },
+          "subtitle": {
+           "font": {
+            "color": "#2a3f5f",
+            "family": "\"Open Sans\", verdana, arial, sans-serif",
+            "lineposition": "none",
+            "shadow": "none",
+            "size": 12,
+            "style": "normal",
+            "textcase": "normal",
+            "variant": "normal",
+            "weight": "normal"
+           },
+           "text": "Click to enter Plot subtitle"
+          },
+          "text": "Click to enter Plot title",
+          "x": 0.05,
+          "xanchor": "auto",
+          "xref": "container",
+          "y": "auto",
+          "yanchor": "auto",
+          "yref": "container"
+         },
+         "uniformtext": {
+          "mode": false
+         },
+         "updatemenus": [],
+         "width": 659,
+         "xaxis": {
+          "anchor": "y",
+          "automargin": true,
+          "autorange": true,
+          "autotickangles": [
+           0,
+           30,
+           90
+          ],
+          "autotypenumbers": "strict",
+          "color": "#444",
+          "constrain": "range",
+          "constraintoward": "center",
+          "domain": [
+           0,
+           1
+          ],
+          "dtick": 2,
+          "exponentformat": "B",
+          "fixedrange": false,
+          "gridcolor": "white",
+          "griddash": "solid",
+          "gridwidth": 1,
+          "hoverformat": "",
+          "layer": "above traces",
+          "minexponent": 3,
+          "nticks": 0,
+          "range": [
+           0,
+           10
+          ],
+          "rangemode": "normal",
+          "separatethousands": false,
+          "showexponent": "all",
+          "showgrid": true,
+          "showline": false,
+          "showspikes": false,
+          "showticklabels": true,
+          "side": "bottom",
+          "tick0": 0,
+          "tickangle": "auto",
+          "tickfont": {
+           "color": "#2a3f5f",
+           "family": "\"Open Sans\", verdana, arial, sans-serif",
+           "lineposition": "none",
+           "shadow": "none",
+           "size": 12,
+           "style": "normal",
+           "textcase": "normal",
+           "variant": "normal",
+           "weight": "normal"
+          },
+          "tickformat": "",
+          "ticklabeloverflow": "hide past div",
+          "ticklabelposition": "outside",
+          "ticklabelshift": 0,
+          "ticklabelstandoff": 0,
+          "ticklabelstep": 1,
+          "tickmode": "auto",
+          "tickprefix": "",
+          "ticks": "",
+          "ticksuffix": "",
+          "title": {
+           "font": {
+            "color": "#2a3f5f",
+            "family": "\"Open Sans\", verdana, arial, sans-serif",
+            "lineposition": "none",
+            "shadow": "none",
+            "size": 14,
+            "style": "normal",
+            "textcase": "normal",
+            "variant": "normal",
+            "weight": "normal"
+           },
+           "standoff": 15,
+           "text": "Click to enter X axis title"
+          },
+          "type": "linear",
+          "visible": true,
+          "zeroline": true,
+          "zerolinecolor": "white",
+          "zerolinewidth": 2
+         },
+         "yaxis": {
+          "anchor": "x",
+          "automargin": true,
+          "autorange": true,
+          "autotypenumbers": "strict",
+          "color": "#444",
+          "constrain": "range",
+          "constraintoward": "middle",
+          "domain": [
+           0,
+           1
+          ],
+          "dtick": 0.5,
+          "exponentformat": "B",
+          "fixedrange": false,
+          "gridcolor": "white",
+          "griddash": "solid",
+          "gridwidth": 1,
+          "hoverformat": "",
+          "layer": "above traces",
+          "minexponent": 3,
+          "nticks": 0,
+          "range": [
+           -1.1111090694955013,
+           1.1110760357041096
+          ],
+          "rangemode": "normal",
+          "separatethousands": false,
+          "showexponent": "all",
+          "showgrid": true,
+          "showline": false,
+          "showspikes": false,
+          "showticklabels": true,
+          "side": "left",
+          "tick0": 0,
+          "tickangle": "auto",
+          "tickfont": {
+           "color": "#2a3f5f",
+           "family": "\"Open Sans\", verdana, arial, sans-serif",
+           "lineposition": "none",
+           "shadow": "none",
+           "size": 12,
+           "style": "normal",
+           "textcase": "normal",
+           "variant": "normal",
+           "weight": "normal"
+          },
+          "tickformat": "",
+          "ticklabeloverflow": "hide past div",
+          "ticklabelposition": "outside",
+          "ticklabelshift": 0,
+          "ticklabelstandoff": 0,
+          "ticklabelstep": 1,
+          "tickmode": "auto",
+          "tickprefix": "",
+          "ticks": "",
+          "ticksuffix": "",
+          "title": {
+           "font": {
+            "color": "#2a3f5f",
+            "family": "\"Open Sans\", verdana, arial, sans-serif",
+            "lineposition": "none",
+            "shadow": "none",
+            "size": 14,
+            "style": "normal",
+            "textcase": "normal",
+            "variant": "normal",
+            "weight": "normal"
+           },
+           "standoff": 15,
+           "text": "Click to enter Y axis title"
+          },
+          "type": "linear",
+          "visible": true,
+          "zeroline": true,
+          "zerolinecolor": "white",
+          "zerolinewidth": 2
+         }
+        },
+        "layout_edit_id": 2
+       },
        "_js2py_pointsCallback": {},
+       "_js2py_relayout": {
+        "relayout_data": {
+         "autosize": true
+        },
+        "source_view_id": "4d11af"
+       },
        "_js2py_restyle": {},
        "_js2py_update": {},
        "_last_layout_edit_id": 2,
