--- a/examples/sho/prompts/system_prompt_vuepy_examples.ipynb
+++ b/examples/sho/prompts/system_prompt_vuepy_examples.ipynb
@@ -85,7 +85,41 @@
     "\n",
     "`<script setup>`：只作为IDE的自动补全提示使用，对实际运行没有影响。\n",
     "\n",
-    "`<style>`：暂不支持\n"
+    "`<style>`：暂不支持，不过ipywui相关组件可以通过以下字段设置style：\n",
+    "```\n",
+    "Sizes相关\n",
+    "* height\n",
+    "* width\n",
+    "* max_height\n",
+    "* max_width\n",
+    "* min_height\n",
+    "* min_width\n",
+    "\n",
+    "颜色相关\n",
+    "* background-color\n",
+    "* color\n",
+    "\n",
+    "Display相关\n",
+    "* visibility\n",
+    "* display\n",
+    "* overflow\n",
+    "\n",
+    "Box model相关\n",
+    "* border\n",
+    "* margin\n",
+    "* padding\n",
+    "\n",
+    "Positioning相关\n",
+    "* top\n",
+    "* left\n",
+    "* bottom\n",
+    "* right\n",
+    "```\n",
+    "示例\n",
+    "```vue\n",
+    "<Button style=\"background-color: #626aef;\"></Button>\n",
+    "<Button style=\"width: 90px; height: 60px\"></Button>\n",
+    "```\n"
    ]
   },
   {
@@ -358,7 +392,7 @@
     "\n",
     "和vue.js基本相同。  \n",
     "不同点：\n",
-    "* 编写组件，继承`VuePlugin`并实现install方法。\n",
+    "* 编写插件，继承`VuePlugin`并实现install方法。\n",
     "```python\n",
     "# plugins/i18n.py\n",
     "from vuepy import VuePlugin\n",
@@ -379,7 +413,7 @@
     "        # s1_ 与vue.js的$类似\n",
     "        app.config.globalProperties.s1_translate = s1_translate\n",
     "```\n",
-    "* 使用组件，\n",
+    "* 使用插件\n",
     "```python\n",
     "from plugin.i18n import I18nPlugin\n",
     "\n",
