examples: sho move style to ipywui

--- a/examples/sho/prompts/system_prompt_ipywui_examples.ipynb
+++ b/examples/sho/prompts/system_prompt_ipywui_examples.ipynb
@@ -28,6 +28,42 @@
     "```py\n",
     "from ipywui import wui\n",
     "app.use(wui)\n",
+    "```\n",
+    "\n",
+    "设置ipywui组件的style属性可以改变其样式（与css非常相似）：\n",
+    "```\n",
+    "Sizes相关\n",
+    "* height\n",
+    "* width\n",
+    "* max_height\n",
+    "* max_width\n",
+    "* min_height\n",
+    "* min_width\n",
+    "\n",
+    "颜色相关\n",
+    "* background-color\n",
+    "* color\n",
+    "\n",
+    "Display相关\n",
+    "* visibility\n",
+    "* display\n",
+    "* overflow\n",
+    "\n",
+    "Box model相关\n",
+    "* border\n",
+    "* margin\n",
+    "* padding\n",
+    "\n",
+    "Positioning相关\n",
+    "* top\n",
+    "* left\n",
+    "* bottom\n",
+    "* right\n",
+    "```\n",
+    "示例\n",
+    "```vue\n",
+    "<Button style=\"background-color: #626aef;\"></Button>\n",
+    "<Button style=\"width: 90px; height: 60px\"></Button>\n",
     "```"
    ]
   },
@@ -12502,7 +12538,7 @@
           "mode": false
          },
          "updatemenus": [],
-         "width": 659,
+         "width": 858,
          "xaxis": {
           "anchor": "y",
           "automargin": true,
@@ -12520,7 +12556,6 @@
            0,
            1
           ],
-          "dtick": 2,
           "exponentformat": "B",
           "fixedrange": false,
           "gridcolor": "white",
@@ -12542,7 +12577,6 @@
           "showspikes": false,
           "showticklabels": true,
           "side": "bottom",
-          "tick0": 0,
           "tickangle": "auto",
           "tickfont": {
            "color": "#2a3f5f",
@@ -12598,7 +12632,6 @@
            0,
            1
           ],
-          "dtick": 0.5,
           "exponentformat": "B",
           "fixedrange": false,
           "gridcolor": "white",
@@ -12620,7 +12653,6 @@
           "showspikes": false,
           "showticklabels": true,
           "side": "left",
-          "tick0": 0,
           "tickangle": "auto",
           "tickfont": {
            "color": "#2a3f5f",
