examples: show ipywui AppLayout add pane_widths

--- a/examples/sho/prompts/system_prompt_ipywui_examples.ipynb
+++ b/examples/sho/prompts/system_prompt_ipywui_examples.ipynb
@@ -234,6 +234,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "您还可以使用 pane_widths（左侧边栏、主区域、右侧边栏的宽度）和 pane_heights（顶栏、主区域、右侧边栏高度）参数修改AppLayout窗格的相对和绝对宽度和高度。两者都接受三个元素的序列，每个元素要么是整数（相当于赋予行/列的权重），要么是格式为 '1fr' （与整数相同）或 '100px'。  \n",
+    "注意使用绑定属性的形式：\n",
+    "```vue\n",
+    "<AppLayout :pane_widths=\"['100px', 1, 1]\" :pane_heights=\"[1, 5, '60px']\">\n",
+    "...\n",
+    "</AppLayout>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Component, Box Layout "
    ]
   },
@@ -12538,7 +12551,7 @@
           "mode": false
          },
          "updatemenus": [],
-         "width": 858,
+         "width": 659,
          "xaxis": {
           "anchor": "y",
           "automargin": true,
@@ -12556,6 +12569,7 @@
            0,
            1
           ],
+          "dtick": 2,
           "exponentformat": "B",
           "fixedrange": false,
           "gridcolor": "white",
@@ -12577,6 +12591,7 @@
           "showspikes": false,
           "showticklabels": true,
           "side": "bottom",
+          "tick0": 0,
           "tickangle": "auto",
           "tickfont": {
            "color": "#2a3f5f",
@@ -12632,6 +12647,7 @@
            0,
            1
           ],
+          "dtick": 0.5,
           "exponentformat": "B",
           "fixedrange": false,
           "gridcolor": "white",
@@ -12653,6 +12669,7 @@
           "showspikes": false,
           "showticklabels": true,
           "side": "left",
+          "tick0": 0,
           "tickangle": "auto",
           "tickfont": {
            "color": "#2a3f5f",
