examples: sho Supplement v-for instructions and tag nesting instructions

--- a/examples/sho/prompts/system_prompt_vuepy_examples.ipynb
+++ b/examples/sho/prompts/system_prompt_vuepy_examples.ipynb
@@ -186,7 +186,7 @@
     "\n",
     "v-for和vue.js的基本一致。  \n",
     "不同点：\n",
-    "* 当有两个参数时，位置索引参数是第一个参数，更符合python习惯。\n",
+    "* 当有v-for有两个参数时，第一个参数index是循环索引，更符合python习惯。\n",
     "  ```vue\n",
     "  <li v-for=\"(index, item) in items\">\n",
     "  ```\n",
@@ -347,7 +347,15 @@
     "和vue.js基本相同  \n",
     "不同点：\n",
     "* 不支持闭合标签，必须显式地写出关闭标签`<A></A>`\n",
-    "* 元素位置限制，在HTML元素中不支持嵌套自定义组件，例如div中不能放置Input等自定义组件，可以使用VBox或HBox替代div作为一种解决方案。\n"
+    "* 元素位置限制，在HTML元素中不支持嵌套自定义组件，例如div中不能放置Input等自定义组件，可以使用VBox或HBox替代div作为一种解决方案。\n",
+    "```vue\n",
+    "<!-- 原生html标签中不能嵌套自定义组件 -->\n",
+    "<div><Input></Input></div>\n",
+    "```\n",
+    "可用VBox代替\n",
+    "```vue\n",
+    "<VBox><Input></Input></VBo>\n",
+    "```\n"
    ]
   },
   {
