--- a/examples/sho/prompts/system_prompt_vuepy_examples.ipynb
+++ b/examples/sho/prompts/system_prompt_vuepy_examples.ipynb
@@ -485,6 +485,121 @@
     "%vuepy_log clear\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 集成 Anywidget\n",
+    "\n",
+    "示例演示与 anywidget 组件进行状态同步，并实现事件机制。\n",
+    "\n",
+    "```vue\n",
+    "<template>\n",
+    "  <p>count: {{ count.value }}</p>\n",
+    "  <Counter v-model=\"count.value\"></Counter>\n",
+    "</template>\n",
+    "\n",
+    "<script lang=\"py\">\n",
+    "import anywidget\n",
+    "import traitlets\n",
+    "\n",
+    "from vuepy import ref, VueComponent\n",
+    "\n",
+    "class CounterWidget(anywidget.AnyWidget):\n",
+    "    _esm = \"\"\"\n",
+    "    function render({ model, el }) {\n",
+    "      let count = () => model.get(\"value\");\n",
+    "      let btn = document.createElement(\"button\");\n",
+    "      btn.classList.add(\"counter-button\");\n",
+    "      btn.innerHTML = `count is ${count()}`;\n",
+    "      btn.addEventListener(\"click\", () => {\n",
+    "        model.set(\"value\", count() + 1);\n",
+    "        model.save_changes();\n",
+    "      });\n",
+    "      model.on(\"change:value\", () => {\n",
+    "        btn.innerHTML = `count is ${count()}`;\n",
+    "      });\n",
+    "      el.appendChild(btn);\n",
+    "    }\n",
+    "    export default { render };\n",
+    "    \"\"\"\n",
+    "    _css = \"\"\"\n",
+    "    .counter-button {\n",
+    "      background-image: linear-gradient(to right, #a1c4fd, #c2e9fb);\n",
+    "      border: 0;\n",
+    "      border-radius: 10px;\n",
+    "      padding: 10px 50px;\n",
+    "      color: white;\n",
+    "    }\n",
+    "    \"\"\"\n",
+    "    value = traitlets.Int(0).tag(sync=True)\n",
+    "\n",
+    "class Counter(VueComponent):\n",
+    "    def render(self, ctx, props, setup_returned):\n",
+    "        attrs = ctx.get('attrs', {})\n",
+    "        return CounterWidget(**props, **attrs)\n",
+    "\n",
+    "count = ref(0)\n",
+    "</script>\n",
+    "```\n",
+    "\n",
+    "实现 container 类型的组件并集成 ipywui 组件 Button。\n",
+    "\n",
+    "```vue\n",
+    "<template>\n",
+    "  <Container>\n",
+    "    <Button label=\"btn\"></Button>\n",
+    "  </Container>\n",
+    "</template>\n",
+    "\n",
+    "<script lang=\"py\">\n",
+    "import anywidget\n",
+    "import traitlets\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "from vuepy import ref, VueComponent\n",
+    "\n",
+    "# 使用anywidget开发Widget\n",
+    "class ContainerWidget(anywidget.AnyWidget):\n",
+    "    _esm = \"\"\"\n",
+    "    async function unpack_models(model_ids, manager) {\n",
+    "      return Promise.all(\n",
+    "        model_ids.map(id => manager.get_model(id.slice(\"IPY_MODEL_\".length)))\n",
+    "      );\n",
+    "    }\n",
+    "    export async function render(view) {\n",
+    "      let model = view.model;\n",
+    "      let el = view.el;\n",
+    "      let div = document.createElement(\"div\");\n",
+    "      div.innerHTML = `<p>hello world</p>`;\n",
+    "\n",
+    "      // 将子组件添加到父组件中\n",
+    "      let model_ids = model.get(\"children\"); /* [\"IPY_MODEL_{model_id>}\", ...] */\n",
+    "      let children_models = await unpack_models(model_ids, model.widget_manager);\n",
+    "      for (let model of children_models) {\n",
+    "        let child_view = await model.widget_manager.create_view(model);\n",
+    "        div.appendChild(child_view.el);\n",
+    "      }\n",
+    "\n",
+    "      el.appendChild(div);\n",
+    "    }\n",
+    "    \"\"\"\n",
+    "    # slot\n",
+    "    children = traitlets.List(trait=traitlets.Instance(widgets.DOMWidget)) \\\n",
+    "        .tag(sync=True, **widgets.widget_serialization)\n",
+    "\n",
+    "# 集成ContainerWidget\n",
+    "class Container(VueComponent):\n",
+    "    def render(self, ctx, props, setup_returned):\n",
+    "        attrs = ctx.get('attrs', {})\n",
+    "        slots = ctx.get('slots', {})\n",
+    "        # 从slot中取出子组件并赋值给children\n",
+    "        return ContainerWidget(children=slots.get('default', []), **props, **attrs)\n",
+    "\n",
+    "</script>\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
@@ -508,7 +623,27 @@
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "085e4631a6a6471e9e16a1d9c01a8fb8": {
+     "13fd6a6314ec47aeb350767e8ac0d815": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "367508b8fa3b4eaaba7de15604ebfa46": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "3abb9c63780c443b86b64d3f84da4a19": {
+      "model_module": "@jupyter-widgets/output",
+      "model_module_version": "1.0.0",
+      "model_name": "OutputModel",
+      "state": {
+       "layout": "IPY_MODEL_13fd6a6314ec47aeb350767e8ac0d815"
+      }
+     },
+     "7b74e5ea64d4466bb7f1ff9a2f4b3d0f": {
       "model_module": "anywidget",
       "model_module_version": "0.9.3",
       "model_name": "AnyModel",
@@ -523,7 +658,7 @@
        "_view_module_version": "0.9.3",
        "_view_name": "AnyView",
        "close_msg_id": "",
-       "layout": "IPY_MODEL_d6fb099b71694b83860330d5f49cded8",
+       "layout": "IPY_MODEL_367508b8fa3b4eaaba7de15604ebfa46",
        "message_options": {
         "duration": 3000,
         "message": "",
@@ -531,70 +666,6 @@
         "type": "info"
        }
       }
-     },
-     "2935164bfb8f4bbda9172bce067038dd": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_aa36efa6ab4a41a3abcd8bf35df2f74a"
-      }
-     },
-     "32bc804264b04a8c850d3590042a39ca": {
-      "model_module": "anywidget",
-      "model_module_version": "0.9.3",
-      "model_name": "AnyModel",
-      "state": {
-       "_anywidget_id": "ipywui.widgets.custom.message.MessageWidget",
-       "_css": ".wui-message-root {\n    display: flex;\n    position: absolute;\n    left: 0;\n    right: 0;\n    top: 0;\n}\n\n.wui-message-container {\n    align-items: center;\n    display: flex;\n    flex-direction: column-reverse;\n    justify-content: center;\n    min-height: 100%;\n    outline: none;\n    width: 100%;\n\n    -webkit-tap-highlight-color: rgba(0,0,0,0);\n    bottom: 0;\n    left: 0;\n    right: 0;\n    top: 0;\n}\n\n.wui-message--success {\n    --wui-message-bg-color: #f0f9eb;\n    --wui-message-border-color: #e1f3d8;\n    --wui-message-text-color: #67c23a;\n}\n.wui-message--warning {\n    --wui-message-bg-color: #fdf6ec;\n    --wui-message-border-color: #faecd8;\n    --wui-message-text-color: #e6a23c;\n}\n.wui-message--info {\n    --wui-message-bg-color: #f4f4f5;\n    --wui-message-border-color: #e9e9eb;\n    --wui-message-text-color: #909399;\n}\n.wui-message--error {\n    --wui-message-bg-color: #fef0f0;\n    --wui-message-border-color: #fde2e2;\n    --wui-message-text-color: #f56c6c;\n}\n\n@keyframes msg-open {\n    0% {\n        opacity: 0;\n        -webkit-transform: translateY(-120%);\n        transform: translateY(-120%)\n    }\n    to {\n        -webkit-transform: translateY(0);\n        transform: translateY(0)\n    }\n}\n\n@keyframes msg-close {\n    0% {\n        opacity: 1;\n        -webkit-transform: scale(1);\n        transform: scale(1)\n    }\n    to {\n        opacity: 0;\n        -webkit-transform: scale(.9);\n        transform: scale(.9)\n    }\n}\n.wui-message[data-state=entered],.wui-message[data-state=entering] {\n    -webkit-animation: msg-open .24s cubic-bezier(.175,.885,.32,1.175) both;\n    animation: msg-open .24s cubic-bezier(.175,.885,.32,1.175) both\n}\n\n.wui-message[data-state=exiting] {\n    -webkit-animation: msg-close .12s cubic-bezier(.4,0,1,1) both;\n    animation: msg-close .12s cubic-bezier(.4,0,1,1) both\n}\n\n.wui-message {\n    width: -webkit-fit-content;\n    width: -moz-fit-content;\n    width: fit-content;\n    z-index: 2004;\n    max-width: calc(100% - 32px);\n    margin-top: 8px;\n    box-sizing: border-box;\n    /*border-radius: var(--wui-border-radius-base);*/\n    /*border-width: var(--wui-border-width);*/\n    /*border-style: var(--wui-border-style);*/\n    border-color: var(--wui-message-border-color);\n    /*left: 50%;*/\n    /*top: 20px;*/\n    /*transform: translateX(-50%);*/\n    background-color: var(--wui-message-bg-color);\n    /*transition: opacity var(--wui-transition-duration),transform .4s,top .4s;*/\n    /*padding: var(--wui-message-padding);*/\n    display: flex;\n    align-items: center;\n}\n\n/*.wui-message--success */\n.wui-message__content {\n    color: var(--wui-message-text-color);\n    font-size: 14px;\n    line-height: 18px;\n    margin: 10px 14px 10px 14px;\n    overflow-wrap: break-word;\n}\n\n.wui-message__closeBtn {\n    /*cursor: pointer;*/\n    font-style: normal;\n    /*color: gray;*/\n    padding-right: 14px;\n    /*font-size: 13px;*/\n    user-select: none;\n\n    background: transparent;\n    border: none;\n    color: gray;\n    cursor: pointer;\n    font-size: 13px;\n    font-weight: 400;\n    line-height: 1;\n    outline: none;\n    /*padding: 4px;*/\n    text-align: center;\n    transition: opacity .3s;\n    /*width: 100%;*/\n}",
-       "_esm": "function closeMsg(msgDom) {\n  if (!msgDom) {\n    return;\n  }\n  msgDom.setAttribute('data-state', 'exiting');\n  msgDom.remove();\n}\n\nfunction createMsg(options) {\n  const {message, msg_id, type = 'info', show_close = false} = options;\n  const msgDom = document.createElement('div');\n  msgDom.className += ` wui-message--${type} wui-message`;\n  msgDom.setAttribute('data-state', 'entered');\n  msgDom.setAttribute('id', msg_id);\n  const msgContent = document.createElement('p');\n  msgContent.className += ` wui-message--${type} wui-message__content`;\n  msgContent.innerText = message;\n  msgDom.appendChild(msgContent);\n  if (show_close) {\n    const closeBtn = document.createElement('i');\n    closeBtn.className += 'wui-message__closeBtn';\n    closeBtn.innerText = 'x';\n    closeBtn.addEventListener('click', (ev) => {\n      closeMsg(msgDom);\n    })\n    msgDom.appendChild(closeBtn);\n  }\n  return msgDom;\n}\n\nexport async function render(view) {\n  let model = view.model;\n  const msgRoot = view.el;\n  msgRoot.className += ' wui-message-root'\n\n  const msgContainer = document.createElement('div');\n  msgContainer.className += ' wui-message-container';\n  msgRoot.appendChild(msgContainer)\n\n  model.on(\"change:message_options\", () => {\n    const options = model.get(\"message_options\");\n    const msg = createMsg(options);\n    msgContainer.appendChild(msg);\n    const {duration = 3000} = options;\n    if (duration > 0) {\n      setTimeout(() => {\n        closeMsg(msg)\n      }, duration);\n    }\n  })\n\n  model.on(\"change:close_msg_id\", () => {\n    const msg_id = model.get(\"close_msg_id\");\n    const msgDom = document.getElementById(msg_id);\n    closeMsg(msgDom);\n  })\n}\n",
-       "_model_module": "anywidget",
-       "_model_module_version": "0.9.3",
-       "_model_name": "AnyModel",
-       "_view_module": "anywidget",
-       "_view_module_version": "0.9.3",
-       "_view_name": "AnyView",
-       "close_msg_id": "",
-       "layout": "IPY_MODEL_60334f9716264b19ad555071ab189bec",
-       "message_options": {
-        "duration": 3000,
-        "message": "",
-        "show_close": false,
-        "type": "info"
-       }
-      }
-     },
-     "349b9100151944969bf03daa66662c3b": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_9c160c624d8a4873a0261a1062800ba3"
-      }
-     },
-     "60334f9716264b19ad555071ab189bec": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "9c160c624d8a4873a0261a1062800ba3": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "aa36efa6ab4a41a3abcd8bf35df2f74a": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "d6fb099b71694b83860330d5f49cded8": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
      }
     },
     "version_major": 2,
