examples: sho vuepy add install, ipywui dropdown, radiobutton, togglebuttons add desc

--- a/examples/sho/prompts/system_prompt_ipywui_examples.ipynb
+++ b/examples/sho/prompts/system_prompt_ipywui_examples.ipynb
@@ -824,7 +824,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Component, RadioButtons"
+    "### Component, RadioButtons\n",
+    "\n",
+    "`v-model` 或初始值必须是 options 中的值或者为`None`。"
    ]
   },
   {
@@ -1282,7 +1284,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Component, ToggleButton"
+    "### Component, ToggleButton\n",
+    "\n",
+    "表示两种相互对立的状态间的切换，多用于触发「开/关」"
    ]
   },
   {
@@ -1321,7 +1325,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Component, ToggleButtons"
+    "### Component, ToggleButtons\n",
+    "\n",
+    "在一组备选项中进行单选"
    ]
   },
   {
@@ -2068,7 +2074,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Component, Dropdown"
+    "### Component, Dropdown\n",
+    "\n",
+    "v-model 或初始值必须是 options 中的值或者为`None`"
    ]
   },
   {
@@ -4720,7 +4728,7 @@
         "IPY_MODEL_7a4a1f10537e421d95b8eb91d9622333"
        ],
        "layout": "IPY_MODEL_3d76f10a20214f699f3bf69f7360a9c9",
-       "selected_index": 1,
+       "selected_index": 0,
        "titles": [
         "Tab1",
         "Tab2",
@@ -8698,7 +8706,6 @@
       "model_name": "FigureModel",
       "state": {
        "_config": {
-        "editSelection": false,
         "plotlyServerURL": "https://plot.ly"
        },
        "_data": [
