example: show vuepy update defineprops, defineemits, definemodel

--- a/examples/sho/prompts/llms-ctx-vuepy.ipynb
+++ b/examples/sho/prompts/llms-ctx-vuepy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +325,58 @@
     "* 需要显式导入`from vuepy import defineProps`\n",
     "* 需要显示地访问value来获取值`props.title.value`\n",
     "\n",
+    "在`<script lang='py'>`中的使用示例：\n",
+    "\n",
+    "```vue\n",
+    "<!-- Hello.vue -->\n",
+    "<template>\n",
+    "  <p>hello {{ props.name.value }}</p>\n",
+    "</template>\n",
+    "<script lang='py'>\n",
+    "from vuepy import defineProps\n",
+    "\n",
+    "props = defineProps(['name'])\n",
+    "</script>\n",
+    "```\n",
+    "\n",
+    "```vue\n",
+    "<!-- App.vue -->\n",
+    "<template>\n",
+    "  <Hello name=\"world\"></Hello>\n",
+    "</template>\n",
+    "```\n",
+    "\n",
+    "在`<script src='xxx.py'>`中的使用示例：\n",
+    "\n",
+    "```vue\n",
+    "<!-- Hello.vue -->\n",
+    "<template>\n",
+    "  <p>hello {{ props.name.value }}</p>\n",
+    "</template>\n",
+    "<script src='hello.py'></script>\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "# hello.py\n",
+    "from vuepy import defineProps\n",
+    "\n",
+    "def setup(props, ctx, app):\n",
+    "    props = defineProps(['name'])\n",
+    "    return locals()\n",
+    "```\n",
+    "\n",
+    "```vue\n",
+    "<!-- App.vue -->\n",
+    "<template>\n",
+    "  <Hello name=\"world\"></Hello>\n",
+    "</template>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 监听事件\n",
     "\n",
     "defineEmits和vue.js基本相同。  \n",
@@ -332,6 +384,77 @@
     "* 需要显式导入`from vuepy import defineEmits`\n",
     "* 原生html标签的监听事件暂不支持\n",
     "\n",
+    "在`<script lang='py'>`中的使用示例：\n",
+    "\n",
+    "```vue\n",
+    "<!-- Hello.vue -->\n",
+    "<template>\n",
+    "  <p>hello</p>\n",
+    "  <Button @click=\"submit\">submit</Button>\n",
+    "</template>\n",
+    "<script lang='py'>\n",
+    "from vuepy import defineEmits\n",
+    "\n",
+    "emit = defineEmits(['submit'])\n",
+    "\n",
+    "def submit(ev):\n",
+    "    print(ev) # Button(description='submit', ...)\n",
+    "    emit('submit', 1, 2, 3)\n",
+    "</script>\n",
+    "```\n",
+    "\n",
+    "```vue\n",
+    "<!-- App.vue -->\n",
+    "<template>\n",
+    "  <Hello @submit=\"on_child_submit\"></Hello>\n",
+    "</template>\n",
+    "<script lang='py'>\n",
+    "def on_child_submit(a, b, c):\n",
+    "    print(a, b, c) # 1 2 3\n",
+    "</script>\n",
+    "```\n",
+    "\n",
+    "在`<script src='xxx.py'>`中的使用示例：\n",
+    "\n",
+    "```vue\n",
+    "<!-- Hello.vue -->\n",
+    "<template>\n",
+    "  <p>hello</p>\n",
+    "  <Button @click=\"submit\">submit</Button>\n",
+    "</template>\n",
+    "<script src='hello.py'></script>\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "# hello.py\n",
+    "from vuepy import defineEmits\n",
+    "\n",
+    "def setup(props, ctx, app):\n",
+    "    emit = defineEmits(['submit'])\n",
+    "\n",
+    "    def submit(ev):\n",
+    "        print(ev) # Button(description='submit', ...)\n",
+    "        emit('submit', 1, 2, 3)\n",
+    "\n",
+    "    return locals()\n",
+    "```\n",
+    "\n",
+    "```vue\n",
+    "<!-- App.vue -->\n",
+    "<template>\n",
+    "  <Hello @submit=\"on_child_submit\"></Hello>\n",
+    "</template>\n",
+    "<script lang='py'>\n",
+    "def on_child_submit(a, b, c):\n",
+    "    print(a, b, c) # 1 2 3\n",
+    "</script>\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 组件 v-model\n",
     "\n",
     "definModel和vue.js基本相同  \n",
@@ -340,6 +463,75 @@
     "* 需要显示地访问value来获取值`xxx.value`\n",
     "* 不支持处理v-model修饰符\n",
     "\n",
+    "在`<script lang='py'>`中的使用示例：\n",
+    "\n",
+    "```vue\n",
+    "<!-- Hello.vue -->\n",
+    "<template>\n",
+    "  <Input v-model=\"model.value\" placeholder=\"name\"></Input>\n",
+    "  <p>child:hello {{ model.value }}</p>\n",
+    "</template>\n",
+    "<script lang='py'>\n",
+    "from vuepy import defineModel\n",
+    "\n",
+    "model = defineModel('model_a')\n",
+    "model.value = 'world'\n",
+    "</script>\n",
+    "```\n",
+    "\n",
+    "```vue\n",
+    "<!-- App.vue -->\n",
+    "<template>\n",
+    "  <Hello v-model:model_a=\"m.value\"></Hello>\n",
+    "  <p>parent: hello {{ m.value }}</p>\n",
+    "</template>\n",
+    "<script lang='py'>\n",
+    "from vuepy import ref\n",
+    "\n",
+    "m = ref('world')\n",
+    "</script>\n",
+    "```\n",
+    "\n",
+    "在`<script src='xxx.py'>`中的使用示例：\n",
+    "\n",
+    "```vue\n",
+    "<!-- Hello.vue -->\n",
+    "<template>\n",
+    "  <Input v-model=\"model.value\" placeholder=\"name\"></Input>\n",
+    "  <p>child:hello {{ model.value }}</p>\n",
+    "</template>\n",
+    "<script src='hello.py'></script>\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "# hello.py\n",
+    "from vuepy import defineModel\n",
+    "\n",
+    "def setup(props, ctx, app):\n",
+    "    model = defineModel() # default\n",
+    "    model.value = 'world'\n",
+    "\n",
+    "    return locals()\n",
+    "```\n",
+    "\n",
+    "```vue\n",
+    "<!-- App.vue -->\n",
+    "<template>\n",
+    "  <Hello v-model=\"m.value\"></Hello>\n",
+    "  <p>parent: hello {{ m.value }}</p>\n",
+    "</template>\n",
+    "<script lang='py'>\n",
+    "from vuepy import ref\n",
+    "\n",
+    "m = ref('world')\n",
+    "</script>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 通过slot分配内容\n",
     "\n",
     "slot和vue.js基本相同  \n",
@@ -360,8 +552,8 @@
     "```\n",
     "可用VBox代替\n",
     "```vue\n",
-    "<VBox><Input></Input></VBo>\n",
-    "```\n"
+    "<VBox><Input></Input></VBox>\n",
+    "```"
    ]
   },
   {
