--- a/examples/sho/prompts/llms-ctx-vuepy.ipynb
+++ b/examples/sho/prompts/llms-ctx-vuepy.ipynb
@@ -192,11 +192,58 @@
     "\n",
     "v-for和vue.js的基本一致。  \n",
     "不同点：\n",
-    "* 当有v-for有两个参数时，第一个参数index是循环索引，更符合python习惯。\n",
+    "* 特别注意：当有v-for有两个参数时，第一个参数index是循环索引，更符合python习惯。\n",
     "  ```vue\n",
     "  <li v-for=\"(index, item) in items\">\n",
     "  ```\n",
-    "* Vue.py 能够侦听响应式数组的变更方法：append ,clear ,extend ,insert ,pop ,remove ,reverse ,sort。"
+    "* Vue.py 能够侦听响应式数组的变更方法：append ,clear ,extend ,insert ,pop ,remove ,reverse ,sort。\n",
+    "\n",
+    "示例：\n",
+    "```vue\n",
+    "<template>\n",
+    "  <!-- list with index: The order is different from vue.js -->\n",
+    "  <div>\n",
+    "    <span v-for=\"(index, item) in l\">\n",
+    "      {{ index }}: {{ item }}\n",
+    "    </span>\n",
+    "  </div>\n",
+    "\n",
+    "  <!-- list -->\n",
+    "  <div>\n",
+    "    <span v-for=\"item in l\">\n",
+    "      {{ item }}\n",
+    "    </span>\n",
+    "  </div>\n",
+    "\n",
+    "  <!-- iter(dict) -->\n",
+    "  <div>\n",
+    "    <span v-for=\"key in d\">\n",
+    "      {{ key }}\n",
+    "    </span>\n",
+    "  </div>\n",
+    "\n",
+    "  <!-- ref dict -->\n",
+    "  <div>\n",
+    "    <span v-for=\"i, value in d_ref.value.values()\">\n",
+    "      {{ i }}: {{ value }}\n",
+    "    </span>\n",
+    "  </div>\n",
+    "\n",
+    "  <!-- list with func -->\n",
+    "  <div>\n",
+    "    <span v-for=\"i in filter(lambda x: x % 2 == 0, l)\">\n",
+    "      {{ i }}\n",
+    "    </span>\n",
+    "  </div>\n",
+    "</template>\n",
+    "<script lang='py'>\n",
+    "from vuepy import ref\n",
+    "\n",
+    "d = {'a': 1, 'b': 2}\n",
+    "d_ref = ref(d)\n",
+    "l = [1, 2, 3, 4, 5]\n",
+    "</script> \n",
+    "```\n"
    ]
   },
   {
@@ -820,7 +867,51 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {},
+    "state": {
+     "76e99fc5649b4acfb054b3d6f8ed2967": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "893ffe46776247eeb717309befcbebb5": {
+      "model_module": "anywidget",
+      "model_module_version": "2.0.0",
+      "model_name": "AnyModel",
+      "state": {
+       "_anywidget_id": "ipywui.widgets.custom.message.MessageWidget",
+       "_css": ".wui-message-root {\n    display: flex;\n    position: absolute;\n    left: 0;\n    right: 0;\n    top: 0;\n}\n\n.wui-message-container {\n    align-items: center;\n    display: flex;\n    flex-direction: column-reverse;\n    justify-content: center;\n    min-height: 100%;\n    outline: none;\n    width: 100%;\n\n    -webkit-tap-highlight-color: rgba(0,0,0,0);\n    bottom: 0;\n    left: 0;\n    right: 0;\n    top: 0;\n}\n\n.wui-message--success {\n    --wui-message-bg-color: #f0f9eb;\n    --wui-message-border-color: #e1f3d8;\n    --wui-message-text-color: #67c23a;\n}\n.wui-message--warning {\n    --wui-message-bg-color: #fdf6ec;\n    --wui-message-border-color: #faecd8;\n    --wui-message-text-color: #e6a23c;\n}\n.wui-message--info {\n    --wui-message-bg-color: #f4f4f5;\n    --wui-message-border-color: #e9e9eb;\n    --wui-message-text-color: #909399;\n}\n.wui-message--error {\n    --wui-message-bg-color: #fef0f0;\n    --wui-message-border-color: #fde2e2;\n    --wui-message-text-color: #f56c6c;\n}\n\n@keyframes msg-open {\n    0% {\n        opacity: 0;\n        -webkit-transform: translateY(-120%);\n        transform: translateY(-120%)\n    }\n    to {\n        -webkit-transform: translateY(0);\n        transform: translateY(0)\n    }\n}\n\n@keyframes msg-close {\n    0% {\n        opacity: 1;\n        -webkit-transform: scale(1);\n        transform: scale(1)\n    }\n    to {\n        opacity: 0;\n        -webkit-transform: scale(.9);\n        transform: scale(.9)\n    }\n}\n.wui-message[data-state=entered],.wui-message[data-state=entering] {\n    -webkit-animation: msg-open .24s cubic-bezier(.175,.885,.32,1.175) both;\n    animation: msg-open .24s cubic-bezier(.175,.885,.32,1.175) both\n}\n\n.wui-message[data-state=exiting] {\n    -webkit-animation: msg-close .12s cubic-bezier(.4,0,1,1) both;\n    animation: msg-close .12s cubic-bezier(.4,0,1,1) both\n}\n\n.wui-message {\n    width: -webkit-fit-content;\n    width: -moz-fit-content;\n    width: fit-content;\n    z-index: 2004;\n    max-width: calc(100% - 32px);\n    margin-top: 8px;\n    box-sizing: border-box;\n    /*border-radius: var(--wui-border-radius-base);*/\n    /*border-width: var(--wui-border-width);*/\n    /*border-style: var(--wui-border-style);*/\n    border-color: var(--wui-message-border-color);\n    /*left: 50%;*/\n    /*top: 20px;*/\n    /*transform: translateX(-50%);*/\n    background-color: var(--wui-message-bg-color);\n    /*transition: opacity var(--wui-transition-duration),transform .4s,top .4s;*/\n    /*padding: var(--wui-message-padding);*/\n    display: flex;\n    align-items: center;\n}\n\n/*.wui-message--success */\n.wui-message__content {\n    color: var(--wui-message-text-color);\n    font-size: 14px;\n    line-height: 18px;\n    margin: 10px 14px 10px 14px;\n    overflow-wrap: break-word;\n}\n\n.wui-message__closeBtn {\n    /*cursor: pointer;*/\n    font-style: normal;\n    /*color: gray;*/\n    padding-right: 14px;\n    /*font-size: 13px;*/\n    user-select: none;\n\n    background: transparent;\n    border: none;\n    color: gray;\n    cursor: pointer;\n    font-size: 13px;\n    font-weight: 400;\n    line-height: 1;\n    outline: none;\n    /*padding: 4px;*/\n    text-align: center;\n    transition: opacity .3s;\n    /*width: 100%;*/\n}",
+       "_esm": "function closeMsg(msgDom) {\n  if (!msgDom) {\n    return;\n  }\n  msgDom.setAttribute('data-state', 'exiting');\n  msgDom.remove();\n}\n\nfunction createMsg(options) {\n  const {message, msg_id, type = 'info', show_close = false} = options;\n  const msgDom = document.createElement('div');\n  msgDom.className += ` wui-message--${type} wui-message`;\n  msgDom.setAttribute('data-state', 'entered');\n  msgDom.setAttribute('id', msg_id);\n  const msgContent = document.createElement('p');\n  msgContent.className += ` wui-message--${type} wui-message__content`;\n  msgContent.innerText = message;\n  msgDom.appendChild(msgContent);\n  if (show_close) {\n    const closeBtn = document.createElement('i');\n    closeBtn.className += 'wui-message__closeBtn';\n    closeBtn.innerText = 'x';\n    closeBtn.addEventListener('click', (ev) => {\n      closeMsg(msgDom);\n    })\n    msgDom.appendChild(closeBtn);\n  }\n  return msgDom;\n}\n\nexport async function render(view) {\n  let model = view.model;\n  const msgRoot = view.el;\n  msgRoot.className += ' wui-message-root'\n\n  const msgContainer = document.createElement('div');\n  msgContainer.className += ' wui-message-container';\n  msgRoot.appendChild(msgContainer)\n\n  model.on(\"change:message_options\", () => {\n    const options = model.get(\"message_options\");\n    const msg = createMsg(options);\n    msgContainer.appendChild(msg);\n    const {duration = 3000} = options;\n    if (duration > 0) {\n      setTimeout(() => {\n        closeMsg(msg)\n      }, duration);\n    }\n  })\n\n  model.on(\"change:close_msg_id\", () => {\n    const msg_id = model.get(\"close_msg_id\");\n    const msgDom = document.getElementById(msg_id);\n    closeMsg(msgDom);\n  })\n}\n",
+       "_model_module": "anywidget",
+       "_model_name": "AnyModel",
+       "_view_name": "ErrorWidgetView",
+       "close_msg_id": "",
+       "error": {},
+       "layout": "IPY_MODEL_90064a968d254a3c9a0b7ffd0ad9199e",
+       "message_options": {
+        "duration": 3000,
+        "message": "",
+        "show_close": false,
+        "type": "info"
+       },
+       "msg": "Failed to load model class 'AnyModel' from module 'anywidget'"
+      }
+     },
+     "90064a968d254a3c9a0b7ffd0ad9199e": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "ef0907beec564a5b98c089305730715b": {
+      "model_module": "@jupyter-widgets/output",
+      "model_module_version": "1.0.0",
+      "model_name": "OutputModel",
+      "state": {
+       "layout": "IPY_MODEL_76e99fc5649b4acfb054b3d6f8ed2967"
+      }
+     }
+    },
     "version_major": 2,
     "version_minor": 0
    }
