examples: sho vuepy add reactive examples, shallowRef, fix computed

--- a/examples/sho/prompts/llms-ctx-vuepy.ipynb
+++ b/examples/sho/prompts/llms-ctx-vuepy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,26 @@
     "\n",
     "ref、reactive和vue.js的基本一致。  \n",
     "不同点：\n",
-    "* 获取ref对象的值需要显式地访问ref对象的value属性。"
+    "* 获取ref对象的值需要显式地访问ref对象的value属性。\n",
+    "\n",
+    "示例\n",
+    "```vue\n",
+    "<template>\n",
+    "  <p>{{ state.count }}</p>\n",
+    "  <InputNumber v-model=\"state.count\"></InputNumber>\n",
+    "  <Button @click=\"add()\">add</Button>\n",
+    "</template>\n",
+    "<script lang='py'>\n",
+    "from vuepy import reactive\n",
+    "\n",
+    "state = reactive({'count': 0})\n",
+    "\n",
+    "def add():\n",
+    "    state.count += 1\n",
+    "</script>\n",
+    "```\n",
+    "\n",
+    "shallowRef是ref的浅层作用形式，可以放弃深层响应性，和vue.js的基本一致。\n"
    ]
   },
   {
@@ -161,7 +180,7 @@
    "source": [
     "## 计算属性\n",
     "\n",
-    "ref、reactive和vue.js的基本一致。  \n",
+    "computed和vue.js的基本一致。  \n",
     "不同点：\n",
     "* 可以使用装饰器声明计算属性\n",
     "```python\n",
@@ -190,8 +209,7 @@
    "source": [
     "## 列表渲染\n",
     "\n",
-    "v-for和vue.js的基本一致。  \n",
-    "不同点：\n",
+    "v-for指令：\n",
     "* 特别注意：当有v-for有两个参数时，第一个参数index是循环索引，更符合python习惯。\n",
     "  ```vue\n",
     "  <li v-for=\"(index, item) in items\">\n",
@@ -849,7 +867,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
