examples: dev_sho vuepy add style

--- a/examples/sho/prompts/llms-ctx-vuepy.ipynb
+++ b/examples/sho/prompts/llms-ctx-vuepy.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "`<script setup>`：只作为IDE的自动补全提示使用，对实际运行没有影响。\n",
     "\n",
-    "`<style>`：暂不支持。\n"
+    "`<style>`：暂不支持，可以在template中直接编写。\n"
    ]
   },
   {
@@ -867,7 +867,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
