examples: sho vuepy async support

--- a/examples/sho/prompts/llms-ctx-vuepy.ipynb
+++ b/examples/sho/prompts/llms-ctx-vuepy.ipynb
@@ -273,7 +273,33 @@
     "v-on和vue.js的基本一致。  \n",
     "不同点：\n",
     "* 只支持自定义组件(如 Button等)，暂不支持原生 html 元素（如 span等）\n",
-    "* 只实现了最基础的功能"
+    "* 只实现了最基础的功能\n",
+    "\n",
+    "支持函数和`async def`的异步函数\n",
+    "```vue\n",
+    "<template>\n",
+    "  <Button button_style=\"info\" @click=\"async_click()\">btn1</Button>\n",
+    "  <Button button_style=\"info\" @click=\"click()\">btn2</Button>\n",
+    "</template>\n",
+    "\n",
+    "<script lang=\"py\">\n",
+    "import asyncio\n",
+    "\n",
+    "async def async_click():\n",
+    "    print('async_click: start')\n",
+    "    await asyncio.sleep(2)\n",
+    "    print('async_click: end')\n",
+    "\n",
+    "def click():\n",
+    "    print('sync_click: click')\n",
+    "</script>\n",
+    "```\n",
+    "先点击btn1，马上再点击btn2，打印的结果如下：\n",
+    "```\n",
+    "async_click: start\n",
+    "sync_click: click\n",
+    "async_click: end\n",
+    "```"
    ]
   },
   {
@@ -886,13 +912,7 @@
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "0be66396e2a24913828a65b67a30f192": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "92c0fc440fec4ea39011f9295d6f813a": {
+     "6a82988a50d148cea6a0fc896225eecd": {
       "model_module": "anywidget",
       "model_module_version": "~0.9.*",
       "model_name": "AnyModel",
@@ -907,7 +927,7 @@
        "_view_module_version": "~0.9.*",
        "_view_name": "AnyView",
        "close_msg_id": "",
-       "layout": "IPY_MODEL_d1d45e2bcde34fc8a675cac8572b6e81",
+       "layout": "IPY_MODEL_d47fd1dfa295458da533d946c4ca24c6",
        "message_options": {
         "duration": 3000,
         "message": "",
@@ -916,19 +936,25 @@
        }
       }
      },
-     "d1d45e2bcde34fc8a675cac8572b6e81": {
+     "750bfa17f21e440b9cf797a3da69105d": {
+      "model_module": "@jupyter-widgets/output",
+      "model_module_version": "1.0.0",
+      "model_name": "OutputModel",
+      "state": {
+       "layout": "IPY_MODEL_e1ed5557e8a446ce9d7ed8c29b17faf0"
+      }
+     },
+     "d47fd1dfa295458da533d946c4ca24c6": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
       "state": {}
      },
-     "d5418780a8674afa865cfb4133e6b46d": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_0be66396e2a24913828a65b67a30f192"
-      }
+     "e1ed5557e8a446ce9d7ed8c29b17faf0": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
      }
     },
     "version_major": 2,
